# egit

./: Cargo.toml  README.md  flake.nix
egit/: Cargo.toml
egit-repo-view/: Cargo.toml
egit-repo-view/src/: lib.rs
egit/src/: lib.rs
egui-dag-view/: Cargo.toml
egui-dag-view/src/: lib.rs
